# Chip8-Emulator

./: .gitignore  CMakeLists.txt
SDL/include/SDL2/: SDL_filesystem.h
src/: InputHandler.cpp  InputHandler.h  SDLDisplay.h  chip8.cpp  chip8.h  constants.h  display.h  input_handler.h  main.cpp  sound_player.h  timer.h
src/displays/: advanced_display.h  advanced_sdl_display.h  simple_display.h  simple_sdl_display.h
src/emulators/: chip8.cpp  chip8.h  emulator.h  schip.cpp  schip.h
src/extras/: input_handler.cpp  input_handler.h  oscillator.h
test_roms/: smile-face-test.ch8  test.ch8
tests/: chip8_test.cpp  schip_test.cpp  test.cpp
